basic styling and some more flow tests

--- a/tc-rannstein-app/src/i18n/translation-de.json
+++ b/tc-rannstein-app/src/i18n/translation-de.json
@@ -1,6 +1,8 @@
 {
-    "translation": {
-            "hello-msg": "hallo welt",
-            "second-msg": "dies ist ein test"
-    }
+  "translation": {
+    "hello-msg": "hallo welt",
+    "second-msg": "dies ist ein test",
+    "third-msg": "das ist nun ein zweiter flow!",
+    "fourth-msg": ":)))"
+  }
 }
