community now working with data

--- a/tc-rannstein-app/src/i18n/translation-de.json
+++ b/tc-rannstein-app/src/i18n/translation-de.json
@@ -143,7 +143,7 @@
         "languageSelect": "Sprache"
       },
       "page3": {
-        "header": "Would you like to:"
+        "header": "Wählen sie eine Option:"
       }
     }
   }
